quarkus-reactive-kafka-producer/kustomize/eda-qs/apps/producer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qs-order-ms
    app.kubernetes.io/name: qs-order-rms
    app.kubernetes.io/version: 1.0.0
  name: eda-qs-order-rms
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: qs-order-rms
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
